RESOLVED FIXED276055
REGRESSION(280517@main): [curl] NetworkCacheDataCurl.cpp(105,23): error: no member named 'data' in 'WTF::FileSystemImpl::MappedFileData'
https://bugs.webkit.org/show_bug.cgi?id=276055
Summary REGRESSION(280517@main): [curl] NetworkCacheDataCurl.cpp(105,23): error: no m...
Fujii Hironori
Reported 2024-06-30 20:54:50 PDT
REGRESSION(280517@main): [curl] NetworkCacheDataCurl.cpp(105,23): error: no member named 'data' in 'WTF::FileSystemImpl::MappedFileData' Windows and PlayStation ports Debug builds can't compile after 280517@main. > C:\BW\WinCairo-64-bit-Debug-Build\build\Source\WebKit\NetworkProcess\cache\NetworkCacheDataCurl.cpp(105,23): error: no member named 'data' in 'WTF::FileSystemImpl::MappedFileData'
Attachments
Fujii Hironori
Comment 1 2024-06-30 21:01:08 PDT
EWS
Comment 2 2024-06-30 21:03:23 PDT
Committed 280519@main (132caed4fcd6): <https://commits.webkit.org/280519@main> Reviewed commits have been landed. Closing PR #30327 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-06-30 21:04:15 PDT
Note You need to log in before you can comment on or make changes to this bug.