REGRESSION(280517@main): [curl] NetworkCacheDataCurl.cpp(105,23): error: no member named 'data' in 'WTF::FileSystemImpl::MappedFileData' https://bugs.webkit.org/show_bug.cgi?id=276055

Unreviewed build fix for Windows and PlayStation ports Debug builds.

> Source/WebKit/NetworkProcess/cache/NetworkCacheDataCurl.cpp(105,23): error: no member named 'data' in 'WTF::FileSystemImpl::MappedFileData'

* Source/WebKit/NetworkProcess/cache/NetworkCacheDataCurl.cpp:

Canonical link: https://commits.webkit.org/280519@main